--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,14 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <meta name="title" content="Sapphire Star's Guide" />
+    <meta name="description" content="The only guide that a Sapphire Star need! Build your own Armor Loadout by browsing armor and weapon library for the best equipment in Monster Hunter World. Compare and Share your builds with other Hunters!" />
+    <meta name="keywords" content="mhw, monster hunter world, hunter, hunter helper, armor loadout builder, sapphire star, sapphire star's guide" />
+    <meta property="og:title" content="Sapphire Star's Guide" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://robertomarinas.github.io/sapphirestarsguide/" />
+    <meta property="og:image" content="https://robertomarinas.github.io/sapphirestarsguide/static/sapphirestar-thumb.png" />
+    <meta property="og:description" content="The only guide that a Sapphire Star need! Build your own Armor Loadout by browsing armor and weapon library for the best equipment in Monster Hunter World. Compare and Share your builds with other Hunters!" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -22,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>SapphireStar's Guide</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
