refactored a shit ton of code

--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#000000" />
-    <meta name="title" content="Sapphire Star's Guide" />
-    <meta name="description" content="The only guide that a Sapphire Star need! Build your own Armor Loadout by browsing armor and weapon library for the best equipment in Monster Hunter World. Compare and Share your builds with other Hunters!" />
-    <meta name="keywords" content="mhw, monster hunter world, hunter, hunter helper, armor loadout builder, sapphire star, sapphire star's guide" />
-    <meta property="og:title" content="Sapphire Star's Guide" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://robertomarinas.github.io/sapphirestarsguide/" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0,user-scalable=0,shrink-to-fit=no"/>
+    <meta name="theme-color" content="#000000"/>
+    <meta name="title" content="Sapphire Star's Guide"/>
+    <meta name="description" content="The only guide that a Sapphire Star need! Build your own Armor Loadout by browsing armor and weapon library for the best equipment in Monster Hunter World. Compare and Share your builds with other Hunters!"/>
+    <meta name="keywords" content="mhw, monster hunter world, hunter, hunter helper, armor loadout builder, sapphire star, sapphire star's guide"/>
+    <meta property="og:title" content="Sapphire Star's Guide"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://robertomarinas.github.io/sapphirestarsguide/"/>
     <meta property="og:image" content="https://robertomarinas.github.io/sapphirestarsguide/static/sapphirestar-thumb.png" />
-    <meta property="og:description" content="The only guide that a Sapphire Star need! Build your own Armor Loadout by browsing armor and weapon library for the best equipment in Monster Hunter World. Compare and Share your builds with other Hunters!" />
+    <meta property="og:image:secure_url" content="https://robertomarinas.github.io/sapphirestarsguide/static/sapphirestar-thumb.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="A Sapphire Star!" />
+    <meta property="og:description" content="The only guide that a Sapphire Star need! Build your own Armor Loadout by browsing armor and weapon library for the best equipment in Monster Hunter World. Compare and Share your builds with other Hunters!"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -30,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>SapphireStar's Guide</title>
+    <title>Sapphire Star's Guide</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
